fixed error in overlapping page styles

--- a/src/pages/creators/creators.css
+++ b/src/pages/creators/creators.css
@@ -1,4 +1,4 @@
-h1 {
+.about-us-container h1 {
     font-size: 8rem;
     /* margin-bottom: 40px; */
     font-family: 'Monserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -6,7 +6,7 @@ h1 {
     color: black;
 
   }
-h2 {
+.about-us-container h2 {
     font-size: 4rem;
     /* margin-bottom: 40px; */
     font-family: 'Monserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,7 +15,7 @@ h2 {
     color: black;
 
 }
-p {
+.about-us-container{
     font-size: 1.5rem;
     font-family: 'Monserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight:bold;
